Fixed an issue with z-index where the modals on the compare page were staying above the text boxes blockingthem from being used again after the first search modals were closed. Used the jquery toggleClass method to toggle z-index 10 and z-index -10.

--- a/berries.css
+++ b/berries.css
@@ -74,6 +74,7 @@ body {
 }
 
 #berry-btn {
+    cursor: pointer;
     font-size: 18px;
     border: none;
     padding: 6px 10px;
@@ -120,8 +121,61 @@ body {
     margin: 0;
 }
 
-#footer img {
+#picture {
     width: 100%;
     margin: 0;
     padding: 0;
+}
+
+/* 13" Macbook Pro 1280x688 */
+@media (min-width: 1200px) and (680px <= height <= 700px) {
+    body {
+        background: #539ae2;
+    }
+
+    #search-instructions {
+        margin: 2em auto;
+        font-weight: 100;
+    }
+
+    #navbar {
+        justify-content: center;
+        gap: 5em;
+        padding: 5px 0;
+    }
+
+    #search_container {
+        margin: 0;
+    }
+
+    .nav-btn:hover {
+        color: #e5c531;
+    }
+
+    #berry-btn:hover {
+        background-color: #e95200;
+    }
+
+    #open-modal {
+        font-size: 15px;
+        top: 22.5em;
+        right: 42em;
+    }
+
+    #modal_screen {
+        border-radius: 20px;
+        font-size: 15px;
+        width: 30%;
+        height: 70svh;
+        margin: 0;
+    }
+
+    #footer {
+        text-align: center;
+        width: 100%;
+    }
+
+    #picture {
+        width: 25%;
+    }
 }
